# SneakPeak

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  REFACTOR_LOG.md  WDL  forum_post_main_edit.txt  index.xml  sdk
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: guide.html
src/: audio_commands.cpp  audio_engine.cpp  audio_engine.h  audio_ops.cpp  audio_ops.h  config.h  context_menu.cpp  debug.h  deess_engine.cpp  deess_engine.h  drag_export.cpp  dynamics_engine.cpp  dynamics_engine.h  dynamics_panel.cpp  dynamics_panel.h  edit_view.cpp  edit_view.h  gain_panel.cpp  gain_panel.h  globals.cpp  globals.h  input_handling.cpp  item_split_ops.cpp  item_split_ops.h  levels_panel.cpp  levels_panel.h  limiter_engine.cpp  limiter_engine.h  limiter_panel.cpp  limiter_panel.h  loop_finder.cpp  loop_finder.h  looplab_panel.cpp  looplab_panel.h  main.cpp  marker_manager.cpp  marker_manager.h  minimap_view.cpp  minimap_view.h  multi_item_view.cpp  (+25 more)
tests/: dyn_regression.cpp  limiter_test.cpp  loop_finder_test.cpp  run_dyn_regression.sh  run_limiter_test.sh  run_loop_finder_test.sh  run_spectral_repair_test.sh  spectral_repair_test.cpp
tests/baselines/: dyn_regression.txt  limiter_test.txt
